--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
   <head>
     <title>Web Mashup: Display House Prices on a Map</title>
     <meta charset="utf-8"/>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCycK7OS2cCIhjIHmPJHE7Qe2p6AthJt9c&sensor=false"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=enterYourAPIkeyHere&sensor=false"></script>
     <script type="text/javascript" src="map.js"></script>
   </head>
   <body onload="initialize();">
