--- a/pong.html
+++ b/pong.html
@@ -16,8 +16,8 @@
       <br/>
       <br/>
       <div id="court" style="border: solid black; cursor: none; width: 1100px; height: 600px;" onclick="startGame(event);">
-		<img id="ball" src="http://lambda.uta.edu/cse4392/ball.gif" style="margin: 0; padding: 0px; position: relative; top: -50px;" />
-		<img id="paddle" src="http://lambda.uta.edu/cse4392/paddle.gif" style="margin: 0; padding: 0; position: relative; left: 1000px;" />
+		<img id="ball" src="PICTUREOFABALL" style="margin: 0; padding: 0px; position: relative; top: -50px;" />
+		<img id="paddle" src="PICTUREOFAPADDLE" style="margin: 0; padding: 0; position: relative; left: 1000px;" />
       </div>
     </form>
   </body>
